removed form div, fixed image alignment, resized button

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -36,13 +36,14 @@ nav {
 
 .image {
   min-width: 100%;
+  vertical-align: bottom;
 }
 
 // main
 main {
   width: 80%;
   margin: 0 auto;
-  padding: 3em 0;
+  padding: 4em 0;
   text-align: center;
 
   .header {
@@ -67,7 +68,7 @@ main {
 }
 
 // form
-.form-container {
+#form {
   padding: 2em;
   position: relative;
 
@@ -101,7 +102,7 @@ main {
     box-shadow: 0px 8px 15px $primary-red;
     transition: width 0.3s;
     transition-timing-function: ease;
-    width: 70px;
+    width: 65px;
   }
 
   #form-button:hover {
